# IOT_Environmental_Monitoring

./: .gitignore  README.md
1.SoftWare/: Generate_Mysql_Rand_Date.py
1.SoftWare/Environmental_Monitoring/: .mxproject  Environmental_Monitoring.ioc
1.SoftWare/Environmental_Monitoring/Core/Inc/: DHT11.h  DS18B20.h  main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
1.SoftWare/Environmental_Monitoring/Core/Src/: DHT11.c  DS18B20.c  adc.c  gpio.c  main.c  stm32f1xx_it.c  tim.c  usart.c
1.SoftWare/Environmental_Monitoring/MDK-ARM/: Environmental_Monitoring.uvguix.prowinter  Environmental_Monitoring.uvoptx  Environmental_Monitoring.uvprojx  startup_stm32f103x6.lst
1.SoftWare/Environmental_Monitoring/MDK-ARM/Environmental_Monitoring/: Environmental_Monitoring.axf  Environmental_Monitoring.build_log.htm  Environmental_Monitoring.hex  Environmental_Monitoring.htm  Environmental_Monitoring.lnp  Environmental_Monitoring.map  Environmental_Monitoring_Environmental_Monitoring.dep  adc.crf  adc.d  dht11.crf  dht11.d  ds18b20.crf  ds18b20.d  gpio.crf  gpio.d  main.crf  main.d  startup_stm32f103x6.d  stm32f1xx_hal.crf  stm32f1xx_hal.d  stm32f1xx_hal_adc.crf  stm32f1xx_hal_adc.d  stm32f1xx_hal_adc_ex.crf  stm32f1xx_hal_adc_ex.d  stm32f1xx_hal_cortex.crf  stm32f1xx_hal_cortex.d  stm32f1xx_hal_dma.crf  stm32f1xx_hal_dma.d  stm32f1xx_hal_exti.crf  stm32f1xx_hal_exti.d  stm32f1xx_hal_flash.crf  stm32f1xx_hal_flash.d  stm32f1xx_hal_flash_ex.crf  stm32f1xx_hal_flash_ex.d  stm32f1xx_hal_gpio.crf  stm32f1xx_hal_gpio.d  stm32f1xx_hal_gpio_ex.crf  stm32f1xx_hal_gpio_ex.d  stm32f1xx_hal_msp.crf  stm32f1xx_hal_msp.d  (+20 more)
1.SoftWare/Environmental_Monitoring/MDK-ARM/RTE/_Environmental_Monitoring/: RTE_Components.h
1.SoftWare/Flask/: montior.py
1.SoftWare/QT/Vegetable_Environmental_Monitoring/: Vegetable_Environmental_Monitoring.pro  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
1.SoftWare/STM32_FreeRTOS/: .mxproject  CMakeLists.txt  Makefile  STM32_FreeRTOS.ioc
1.SoftWare/STM32_FreeRTOS/Core/Inc/: DHT11.h  DS18B20.h  FreeRTOSConfig.h  main.h  stm32f1xx_it.h
1.SoftWare/STM32_FreeRTOS/Core/Src/: DHT11.c  DS18B20.c  freertos.c  gpio.c  main.c  stm32f1xx_it.c  tim.c  usart.c
1.SoftWare/WIFI_Connect_MQTT/: WIFI_Connect.ino  WIFI_Connect_MQTT.ino
3.Doc/: IoT Manager.apk
